tests/snapshots/parser_tests__indentation__misaligned_dedent_error.snap
---
source: tests/parser_tests.rs
expression: "(ast, errors)"
---
(
    Some(
        Document {
            children: [
                Object {
                    entries: [
                        ObjectEntry {
                            key: "outer",
                            key_span: Span {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                    offset: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 5,
                                    offset: 5,
                                },
                            },
                            value: Object {
                                entries: [
                                    ObjectEntry {
                                        key: "inner",
                                        key_span: Span {
                                            start: Position {
                                                line: 1,
                                                column: 4,
                                                offset: 11,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 9,
                                                offset: 16,
                                            },
                                        },
                                        value: String {
                                            value: "value",
                                            span: Span {
                                                start: Position {
                                                    line: 1,
                                                    column: 11,
                                                    offset: 18,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 16,
                                                    offset: 23,
                                                },
                                            },
                                        },
                                    },
                                ],
                                span: Span {
                                    start: Position {
                                        line: 1,
                                        column: 0,
                                        offset: 7,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 16,
                                        offset: 23,
                                    },
                                },
                            },
                        },
                    ],
                    span: Span {
                        start: Position {
                            line: 0,
                            column: 0,
                            offset: 0,
                        },
                        end: Position {
                            line: 1,
                            column: 16,
                            offset: 23,
                        },
                    },
                },
            ],
            span: Span {
                start: Position {
                    line: 0,
                    column: 0,
                    offset: 0,
                },
                end: Position {
                    line: 1,
                    column: 16,
                    offset: 23,
                },
            },
        },
    ),
    [],
)
