tests/snapshots/parser_tests__indentation__tab_indentation_error.snap
---
source: tests/parser_tests.rs
expression: "(ast, errors)"
---
(
    Some(
        Document {
            children: [
                Object {
                    entries: [
                        ObjectEntry {
                            key: "person",
                            key_span: Span {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                    offset: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 6,
                                    offset: 6,
                                },
                            },
                            value: Null {
                                span: Span {
                                    start: Position {
                                        line: 1,
                                        column: 0,
                                        offset: 8,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 0,
                                        offset: 8,
                                    },
                                },
                            },
                        },
                    ],
                    span: Span {
                        start: Position {
                            line: 0,
                            column: 0,
                            offset: 0,
                        },
                        end: Position {
                            line: 1,
                            column: 0,
                            offset: 8,
                        },
                    },
                },
            ],
            span: Span {
                start: Position {
                    line: 0,
                    column: 0,
                    offset: 0,
                },
                end: Position {
                    line: 1,
                    column: 0,
                    offset: 8,
                },
            },
        },
    ),
    [],
)
